# VknConfig

./: .gitignore  CMakeLists.txt  CMakePresets.json  Patched CMAKELISTS.txt  README.md  VkExtCheck.cpp  VknCommon.cpp  VknCommon.hpp  build.cmake  build_debug.bat  build_release.bat  build_win_debug.bat  build_win_release.bat  cmakelists.txt.imguiBackends  common.cpp  extensionList.txt  vcpkg.json  vcpkg.json.old
Chapter1/: CMakeLists.txt  CMakeLists.txt.old  Chapter1_Triangle.cpp  main.cpp
Chapter2/: CMakeLists.txt  Chapter2_bindfull.cpp  Chapter2_meshOptimized.cpp  Chapter2_multiDrawIndirect.cpp
VkCore/: VkCore.hpp
VkExtCheck/: CMakeLists.txt  VkExtCheck.cpp
VknConfig/: CMakeLists.txt  VknApp.cpp  VknBuffer.cpp  VknColorBlendState.cpp  VknCommandPool.cpp  VknCommon.cpp  VknConfig.cpp  VknConfig.hpp  VknCycle.cpp  VknData.cpp  VknDescriptorSetLayout.cpp  VknDevice.cpp  VknDevice.hpp  VknDynamicState.cpp  VknEngine.cpp  VknEngine.hpp  VknFeatures.cpp  VknFramebuffer.cpp  VknFramebuffer.hpp  VknImage.cpp  VknImageView.cpp  VknImageView.hpp  VknInfos.cpp  VknInfos.hpp  VknInputAssemblyState.cpp  VknInputAssemblyState.hpp  VknMultisampleState.cpp  VknMultisampleState.hpp  VknObject.cpp  VknPhysicalDevice.cpp  VknPhysicalDevice.hpp  VknPipeline.cpp  VknPipeline.hpp  VknPipelineLayout.cpp  VknPlatforms.cpp  VknQueueFamily.cpp  VknQueueFamily.hpp  VknRasterizationState.cpp  VknRasterizationState.hpp  VknRenderPass.cpp  (+13 more)
VknConfig/PlatformSpecific/: Android_Window.cpp  Android_WindowJNI.cpp  GLFW_Window.cpp
VknConfig/PlatformSpecific/include/: Android_Window.hpp  Android_WindowJNI.hpp  GLFW_Window.hpp
VknConfig/include/: VknApp.hpp  VknBuffer.hpp  VknColorBlendState.hpp  VknCommandPool.hpp  VknCommon.hpp  VknConfig.hpp  VknCycle.hpp  VknData.hpp  VknDescriptorSetLayout.hpp  VknDevice.hpp  VknDynamicState.hpp  VknEngine.hpp  VknFeatures.hpp  VknFramebuffer.hpp  VknImage.hpp  VknImageView.hpp  VknInfos.hpp  VknInputAssemblyState.hpp  VknMultisampleState.hpp  VknObject.hpp  VknPhysicalDevice.hpp  VknPipeline.hpp  VknPipelineLayout.hpp  VknPlatforms.hpp  VknQueueFamily.hpp  VknRasterizationState.hpp  VknRenderpass.hpp  VknResult.hpp  VknShaderStage.hpp  VknSwapchain.cpp  VknSwapchain.hpp  VknVertexInputState.hpp  VknViewportState.hpp  VknWindow.hpp
VknConfig/presets/: DeviceInfo.cpp  InputTest.cpp  NoInput.cpp
VknConfig/source/: VknConfig.cpp  VknDevice.cpp  VknEngine.cpp  VknFramebuffer.cpp  VknImageView.cpp  VknInfos.cpp  VknInputAssemblyState.cpp  VknMultisampleState.cpp  VknPhysicalDevice.cpp  VknPipeline.cpp  VknQueueFamily.cpp  VknRasterizationState.cpp  VknRenderpass.cpp  VknResult.cpp  VknShaderStage.cpp  VknVertexInputState.cpp  VknViewportState.cpp
buildScripts/windows/: build_win_debug.bat  build_win_release.bat
enginecore/: CMakeLists.txt  GLBLoader.cpp  ImguiManager.cpp
minTest/: CMakeLists.txt  CkBk-minTest.cpp  Cookbook-minTest.cpp  minGLFWtest.cpp  minTest.cpp
minTest/resources/shaders/: simple_shader.vert.spv  test_2triangles.vert.spv  triangle.vert  triangle.vert.spv
projectStructure/: projectStructure.puml
scripts/: patch_gli_cmake_version.py
tests/: CMakeLists.txt  test_vknspace.cpp  test_vknvector.cpp  test_vknvectoriterator.cpp
vma/: vma.cpp
vulkancore/: Buffer.hpp  CMakeLists.txt  Common.hpp  Context.hpp  DynamicRendering.hpp  ShaderModule.cpp  Texture.hpp  vma.cpp
